# isvalid-sdk-python

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
isvalid_sdk/: __init__.py  client.py  errors.py
isvalid_sdk/namespaces/: au.py  br.py  country.py  currency.py  es.py  gb.py  gs1_prefix.py  hs_code.py  http_status.py  iata.py  india.py  industry.py  language.py  lei.py  locode.py  mime_type.py  net.py  pl.py  swift_mt.py  timezone.py  us.py
isvalid_sdk/types/: __init__.py  au.py  br.py  country.py  currency.py  es.py  gb.py  gs1_prefix.py  hs_code.py  http_status.py  iata.py  india.py  industry.py  language.py  lei.py  locode.py  mime_type.py  net.py  pl.py  simple.py  swift_mt.py  timezone.py  us.py
tests/: test_client.py
