[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "isvalid-sdk"
version = "0.2.0"
description = "Python SDK for the isvalid.dev validation API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "isvalid.dev" }]
keywords = [
    "validation", "api", "sdk", "isvalid",
    "iban", "lei", "isin", "vat", "email",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = ["httpx>=0.24.0", "typing_extensions>=4.0.0"]

[project.optional-dependencies]
dev = ["mypy>=1.0", "pytest>=7.0"]

[project.urls]
Homepage = "https://isvalid.dev"
Documentation = "https://isvalid.dev/docs"
Repository = "https://github.com/isvalid-dev/isvalid-sdk-python"

[tool.hatch.build.targets.wheel]
packages = ["isvalid_sdk"]
